--- a/package.json
+++ b/package.json
@@ -10,50 +10,51 @@
     "not op_mini all"
   ],
   "dependencies": {
-    "@babel/plugin-transform-react-constant-elements": "^7.0.0-rc.1",
-    "autoprefixer": "^8.3.0",
-    "gatsby": "^2.0.0-beta.100",
-    "gatsby-cli": "^2.0.0-beta.13",
-    "gatsby-image": "^2.0.0-beta.7",
-    "gatsby-plugin-manifest": "^2.0.2-beta.5",
-    "gatsby-plugin-netlify": "^2.0.0-beta.6",
-    "gatsby-plugin-netlify-cache": "^0.1.0",
-    "gatsby-plugin-offline": "^2.0.0-beta.9",
-    "gatsby-plugin-postcss": "^2.0.0-beta.3",
-    "gatsby-plugin-react-helmet": "^3.0.0-beta.4",
-    "gatsby-plugin-robots-txt": "^1.3.0",
-    "gatsby-plugin-sharp": "^2.0.0-beta.7",
-    "gatsby-plugin-sitemap": "^2.0.0-beta.4",
-    "gatsby-plugin-svgr": "^2.0.0-alpha",
-    "gatsby-source-filesystem": "^2.0.1-beta.10",
-    "gatsby-transformer-sharp": "^2.1.1-beta.7",
-    "gatsby-transformer-yaml": "^2.1.1-beta.3",
-    "intersection-observer": "^0.5.0",
-    "loadjs": "^3.5.4",
-    "object-fit-images": "^3.2.3",
-    "precss": "^3.1.2",
-    "purgecss-webpack-plugin": "^1.2.1",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-helmet": "^5.2.0",
+    "@babel/plugin-transform-react-constant-elements": "^7.2.0",
+    "@svgr/webpack": "^4.2.0",
+    "autoprefixer": "^9.5.1",
+    "gatsby": "^2.5.7",
+    "gatsby-cli": "^2.5.15",
+    "gatsby-image": "^2.1.0",
+    "gatsby-plugin-manifest": "^2.1.1",
+    "gatsby-plugin-netlify": "^2.0.17",
+    "gatsby-plugin-netlify-cache": "^1.2.0",
+    "gatsby-plugin-offline": "^2.1.1",
+    "gatsby-plugin-postcss": "^2.0.7",
+    "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-robots-txt": "^1.4.0",
+    "gatsby-plugin-sharp": "^2.0.37",
+    "gatsby-plugin-sitemap": "^2.1.0",
+    "gatsby-plugin-svgr": "^2.0.2",
+    "gatsby-source-filesystem": "^2.0.37",
+    "gatsby-transformer-sharp": "^2.1.19",
+    "gatsby-transformer-yaml": "^2.1.12",
+    "intersection-observer": "^0.7.0",
+    "loadjs": "^3.6.1",
+    "object-fit-images": "^3.2.4",
+    "precss": "^4.0.0",
+    "purgecss-webpack-plugin": "^1.5.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
     "react-icons": "^2.2.7",
     "react-transition-group": "^2.3.1",
     "react-waypoint": "^8.0.1",
-    "shortid": "^2.2.12",
+    "shortid": "^2.2.14",
     "tailwindcss": "^0.6.5",
-    "what-input": "^5.0.5"
+    "what-input": "^5.2.1"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
     "eslint": "^4.19.1",
     "eslint-config-react-app": "^2.1.0",
     "eslint-plugin-flowtype": "^2.50.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.13.0",
     "stylelint": "^9.2.0",
-    "stylelint-config-recommended": "^2.1.0",
-    "stylelint-no-unsupported-browser-features": "^3.0.0"
+    "stylelint-config-recommended": "^2.2.0",
+    "stylelint-no-unsupported-browser-features": "^3.0.2"
   },
   "scripts": {
     "dev": "gatsby develop",
